--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     .content {
         vertical-align: middle;
-        line-height: 60px;
+        line-height: 30px;
     }
 
     .text {
@@ -54,8 +54,12 @@
 
 <div id="container" class="svg-container content">
 </div>
+</body>
 
 <script>
+    /**
+     * Created by angie on 9/6/17.
+     */
     var originalData;
     $.get("datacenter.json", function (data) {
         originalData = data;
@@ -140,7 +144,7 @@
     var reRender = function (data) {
         d3.select("#container").selectAll('*').remove();
         render(data);
-    }
+    };
 
     // Bind UI event handlers
     var searchListener = function () {
@@ -172,12 +176,9 @@
 
 
         reRender(filteredJSON);
-
-    };
-
+    }
 </script>
 
-</body>
 </html>
 
 
